--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "webpack": "4.42.0"
   },
   "scripts": {
